<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/icon_upcoming"
        android:title="@string/title_upcoming"/>

<item
    android:id="@+id/navigation_finished"
    android:icon="@drawable/icon_finished"
    android:title="@string/title_finished"/>
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/icon_favorite"
        android:title="@string/title_favorite"/>
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/icon_setting"
        android:title="@string/title_setting"
        />
</menu>